--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,19 +1,17 @@
-<h2 id="title" class="title">OASIS SCHOOL OF BUSINESS AND TECHNOLOGY</h2>
-<!-- <p class="sub-title">Log in with your username</p> --> <br><br>
+<div class="animated fadeIn">
+  <div class="alert alert-danger" role="alert" *ngIf="loginAlert.status=='error'">
+    {{ loginAlert.message }}
+  </div>
+  <div class="alert alert-warning" role="alert" *ngIf="loginAlert.status=='warning'">
+    {{ loginAlert.message }}
+  </div>
+  <div class="alert alert-success" role="alert" *ngIf="loginAlert.status=='success'">
+    {{ loginAlert.message }}
+  </div>
+</div>
 
-<nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
-  <p class="alert-title"><b>Oh snap!</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
-  </ul>
-</nb-alert>
+<h2 id="title" class="title">OASIS SCHOOL OF BUSINESS AND TECHNOLOGY</h2><br>
 
-<nb-alert *ngIf="showMessages.success && messages?.length && !submitted" outline="success" role="alert">
-  <p class="alert-title"><b>Hooray!</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
-  </ul>
-</nb-alert>
 
 <form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title">
 
@@ -37,7 +35,7 @@
   <div class="form-control-group">
     <span class="label-with-link">
       <label class="label" for="input-password">Password:</label>
-      <a class="forgot-password caption-2" routerLink="../reset_password">Forgot Password?</a>
+      <a class="forgot-password caption-2" routerLink="../reset_password">Reset Password</a>
     </span>
     <input nbInput fullWidth [(ngModel)]="user.password" #password="ngModel" name="password" type="password"
       id="input-password" placeholder="Password" fieldSize="large"
@@ -59,33 +57,8 @@
     </ng-container>
   </div>
 
-  <!-- <div class="form-control-group accept-group">
-    <nb-checkbox name="rememberMe" [(ngModel)]="user.rememberMe" *ngIf="rememberMe">Remember me</nb-checkbox>
-  </div> -->
 
   <button nbButton fullWidth status="primary" size="large" [disabled]="!form.valid">
     Log In
   </button>
 </form>
-
-<section *ngIf="socialLinks && socialLinks.length > 0" class="links" aria-label="Social sign in">
-  or enter with:
-  <div class="socials">
-    <ng-container *ngFor="let socialLink of socialLinks">
-      <a *ngIf="socialLink.link" [routerLink]="socialLink.link" [attr.target]="socialLink.target"
-        [attr.class]="socialLink.icon" [class.with-icon]="socialLink.icon">
-        <nb-icon *ngIf="socialLink.icon; else title" [icon]="socialLink.icon"></nb-icon>
-        <ng-template #title>{{ socialLink.title }}</ng-template>
-      </a>
-      <a *ngIf="socialLink.url" [attr.href]="socialLink.url" [attr.target]="socialLink.target"
-        [attr.class]="socialLink.icon" [class.with-icon]="socialLink.icon">
-        <nb-icon *ngIf="socialLink.icon; else title" [icon]="socialLink.icon"></nb-icon>
-        <ng-template #title>{{ socialLink.title }}</ng-template>
-      </a>
-    </ng-container>
-  </div>
-</section>
-
-<section class="another-action" aria-label="Register">
-  Don't have an account? <a class="text-link" routerLink="../register">Register</a>
-</section>
