--- a/src/app/pages/course/room-management/room-management.component.html
+++ b/src/app/pages/course/room-management/room-management.component.html
@@ -1,9 +1,21 @@
+<!-- alert message -->
+<div class="animated fadeIn col-12">
+    <div class="alert alert-danger" role="alert" *ngIf="createRoomAlert.status=='error'">
+        {{ createRoomAlert.message }}
+    </div>
+    <div class="alert alert-warning" role="alert" *ngIf="createRoomAlert.status=='warning'">
+        {{ createRoomAlert.message }}
+    </div>
+    <div class="alert alert-success" role="alert" *ngIf="createRoomAlert.status=='success'">
+        {{ createRoomAlert.message }}
+    </div>
+</div>
 <div class="col-12">
     <nb-card size="flexible">
         <nb-tabset fullWidth>
-            <nb-tab tabTitle="Create Room" tabIcon="person-outline">
+            <nb-tab tabTitle="Create Room">
                 <div class="row">
-                    <div class="col-md-9 offset-md-1">
+                    <div class="col-md-9 offset-md-2">
                         <nb-card>
                             <nb-card-header>Create Room</nb-card-header>
                             <nb-card-body>
@@ -29,16 +41,6 @@
                                         </div>
                                     </div><br>
 
-                                    <div class="form-group row">
-                                        <label for="is_ac_available" class="label col-sm-4 form-control-label"
-                                            style="font-size: 12.75px;">Is Air Condition Availbale</label>
-                                        <div class="col-sm-8">
-                                            <nb-radio-group formControlName="is_ac_available">
-                                                <nb-radio [value]="'Yes'">Yes</nb-radio>
-                                                <nb-radio [value]="'No'">No</nb-radio>
-                                            </nb-radio-group>
-                                        </div>
-                                    </div><br>
 
                                     <div class="form-group row">
                                         <label for="description" class="label col-sm-4 form-control-label"
@@ -46,18 +48,6 @@
                                         <div class="col-sm-8">
                                             <textarea rows="5" formControlName="description" nbInput
                                                 placeholder="Course Description"></textarea>
-                                        </div>
-                                    </div><br>
-
-                                    <div class="form-group row">
-                                        <label for="status" class="label col-sm-4 form-control-label"
-                                            style="font-size: 12.75px;">Status
-                                            of Room</label>
-                                        <div class="col-sm-8">
-                                            <nb-radio-group formControlName="status">
-                                                <nb-radio [value]="'available'">Available</nb-radio>
-                                                <nb-radio [value]="'not_available'">Not Available</nb-radio>
-                                            </nb-radio-group>
                                         </div>
                                     </div><br>
 
@@ -76,15 +66,18 @@
 
             <nb-tab tabTitle="Edit and Delete">
                 <br><br>
+
                 <table class="table table-bordered table-hover">
                     <thead>
                         <tr>
                             <th>Room Name</th>
                             <th>Number of seats </th>
                             <th>Description</th>
+
                             <th>Status</th>
                             <th>Edit</th>
                             <th *ngIf="role=='Admin'">Delete</th>
+
                         </tr>
                     </thead>
                     <tbody>
@@ -92,9 +85,20 @@
                             <td>{{room.name}}</td>
                             <td>{{room.no_of_seats}}</td>
                             <td>{{room.description}}</td>
-                            <td>{{room.status}}</td>
+
+                            <td *ngIf="room.status=='active'"><span class="badge badge-success">Active</span>
+                            </td>
+                            <td *ngIf="room.status=='deleted'"><span class="badge badge-warning">Deleted</span>
+                            </td>
                             <td><button class="btn btn-primary" (click)="editClick(room)">Edit</button></td>
-                            <td *ngIf="role=='Admin'"><button class="btn btn-warning"> Delete</button></td>
+                            <td *ngIf="role=='Admin' && room.status=='active'">
+                                <button class="btn btn-warning" (click)="changeStatus(room,'deleted')">
+                                    Delete</button>
+                            </td>
+                            <td *ngIf="role=='Admin' && room.status=='deleted'">
+                                <button class="btn btn-success" (click)="changeStatus(room,'active')">
+                                    Activate</button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -102,17 +106,6 @@
 
                 <div class="row" *ngIf="editFormDisplay">
                     <div class="col-md-9 offset-md-1">
-
-                        <!-- alert message -->
-                        <!-- <div class="animated fadeIn">
-                            <div class="alert alert-danger" role="alert" *ngIf="alertSub.status=='Error'">
-                                {{ alertSub.message }}
-                            </div>
-                            <div class="alert alert-warning" role="alert" *ngIf="alertSub.status=='warning'">
-                                {{ alertSub.message }}
-                            </div>
-                        </div> -->
-
                         <nb-card>
                             <nb-card-header>Edit Room</nb-card-header>
                             <nb-card-body>
@@ -137,34 +130,11 @@
                                     </div><br>
 
                                     <div class="form-group row">
-                                        <label for="is_ac_available" class="label col-sm-4 form-control-label"
-                                            style="font-size: 12.75px;">Is Air Condition Availbale</label>
-                                        <div class="col-sm-8">
-                                            <nb-radio-group formControlName="is_ac_available">
-                                                <nb-radio [value]="'Yes'">Yes</nb-radio>
-                                                <nb-radio [value]="'No'">No</nb-radio>
-                                            </nb-radio-group>
-                                        </div>
-                                    </div><br>
-
-                                    <div class="form-group row">
                                         <label for="description" class="label col-sm-4 form-control-label"
                                             style="font-size: 12.75px;">Description</label>
                                         <div class="col-sm-8">
                                             <textarea rows="5" formControlName="description" nbInput
                                                 placeholder="Course Description"></textarea>
-                                        </div>
-                                    </div><br>
-
-                                    <div class="form-group row">
-                                        <label for="status" class="label col-sm-4 form-control-label"
-                                            style="font-size: 12.75px;">Status
-                                            of Room</label>
-                                        <div class="col-sm-8">
-                                            <nb-radio-group formControlName="status">
-                                                <nb-radio [value]="'available'">Available</nb-radio>
-                                                <nb-radio [value]="'not_available'">Not Available</nb-radio>
-                                            </nb-radio-group>
                                         </div>
                                     </div><br>
 
@@ -183,11 +153,6 @@
                 </div>
 
             </nb-tab>
-
-            <nb-tab tabTitle="Schedules">
-
-            </nb-tab>
-
         </nb-tabset>
     </nb-card>
 </div>
