--- a/src/app/pages/teacher/view-teacher/view-teacher.component.html
+++ b/src/app/pages/teacher/view-teacher/view-teacher.component.html
@@ -2,8 +2,64 @@
     <nb-card size="flexible">
         <nb-tabset fullWidth>
             <nb-tab tabTitle="Profile">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius harum omnis, nobis voluptatem tenetur
-                deserunt dolor excepturi explicabo dolore unde. Ad voluptas quidem, sapiente commodi est sed assumenda
+                <div class="col-md-8 offset-md-2">
+                    <nb-card>
+                        <nb-card-header>Register Teacher</nb-card-header>
+                        <nb-card-body>
+                            <form class="form-horizontal" [formGroup]="teacherEditForm"
+                                (ngSubmit)="submitTeacherEditForm()">
+                                <div class="form-group row">
+                                    <label for="name" class="label col-sm-3 form-control-label"
+                                        style="font-size: 12.75px;">Enter
+                                        Teacher Name</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" formControlName="name" nbInput fullWidth id="name"
+                                            style="font-size: 12.75px;" placeholder="Name">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="nic" class="label col-sm-3 form-control-label"
+                                        style="font-size: 12.75px;">NIC
+                                        Number</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" formControlName="nic" nbInput fullWidth id="nic"
+                                            ng-model="field" style="font-size: 12.75px;" placeholder="981592298v">
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label for="email" class="label col-sm-3 form-control-label"
+                                        style="font-size: 12.75px;">Enter
+                                        Email</label>
+                                    <div class="col-sm-9">
+                                        <input type="email" formControlName="email" nbInput fullWidth id="email"
+                                            style="font-size: 12.75px;" placeholder="Email">
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label for="mobile_no" class="label col-sm-3 form-control-label"
+                                        style="font-size: 12.75px;">Enter Contact Number</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" formControlName="mobile_no" nbInput fullWidth id="mobile_no"
+                                            style="font-size: 12.75px;" placeholder="Contact Number">
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label for="address" class="label col-sm-3 form-control-label"
+                                        style="font-size: 12.75px;">Enter
+                                        Address</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" formControlName="address" nbInput fullWidth id="address"
+                                            style="font-size: 12.75px;" placeholder="Home Address">
+                                    </div>
+                                </div>
+                                <button nbButton type="submit">Submit</button>
+                            </form>
+                        </nb-card-body>
+                    </nb-card>
+                </div>
             </nb-tab>
 
             <nb-tab tabTitle="Teacher Monthly Student Fee">
